--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,6 @@ dependencies:
   flutter:
     sdk: flutter 
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,7 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^1.0.5
   path_provider: ^2.1.1
-
+  uuid: ^4.3.1
 
 dev_dependencies:
   flutter_test:
